syntax = "proto3";
package plugnmeet;

option go_package = "github.com/mynaparrot/plugnmeet-protocol/plugnmeet";

message PlugNMeetToRecorder {
  string from = 1;
  RecordingTasks task = 2;
  string room_id = 3;
  string room_sid = 4;
  string recording_id = 5;
  string recorder_id = 6;
  string access_token = 7;
  optional string rtmp_url = 8;
}

message RecorderToPlugNMeet {
  string from = 1;
  RecordingTasks task = 2;
  bool status = 3;
  string msg = 4;
  string recording_id = 5;
  string room_id = 6;
  string room_sid = 7;
  string recorder_id = 8;
  string file_path = 9;
  float file_size = 10;
}

enum RecordingTasks {
  START_RECORDING = 0;
  STOP_RECORDING = 1;
  START_RTMP = 2;
  STOP_RTMP = 3;
  END_RECORDING = 4;
  END_RTMP = 5;
  RECORDING_PROCEEDED = 6;
  STOP = 7;
}

enum RecorderServiceType {
  RECORDING = 0;
  RTMP = 1;
}